# r2-home-assignment

be-high-level/: Dockerfile  build.gradle  settings.gradle
be-high-level/src/main/java/com.r2.backend/: BackendHighLevelApplication.java
be-high-level/src/main/java/com.r2.backend/controller/: ApiController.java
be-high-level/src/main/java/com.r2.backend/model/: AuthResult.java  LoginRequest.java  LoginResponse.java
be-high-level/src/main/java/com.r2.backend/service/: AuthService.java  LuckService.java  TokenService.java
be-high-level/src/main/resources/: application.properties
be-low-level/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
be-low-level/src/: auth.rs  error.rs  luck.rs  main.rs  middleware.rs  model.rs  tests.rs  token.rs
