[package]
name = "be-low-level"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"
rand = "0.8"
thiserror = "1"
env_logger = "0.11"
log = "0.4"